syntax = "proto3";
package example.apis.githubv1alpha2;
option  go_package              = "go.f110.dev/kubeproto/example/pkg/apis/githubv1alpha2";
option (dev.f110.kubeproto.k8s) = {
  domain: "f110.dev",
  sub_group: "grafana",
  version: "v1alpha2",
};

import "kube.proto";

message Grafana {
  GrafanaSpec   spec   = 1;
  GrafanaStatus status = 2;

  option (dev.f110.kubeproto.kind) = {
  };
}

message GrafanaSpec {
  optional string     admin_user = 1;
  map<string, string> labels     = 2;
}

message GrafanaStatus {
  int64 observed_generation = 1;
  // history is a list of History
  repeated History history = 2;
}

message History {
  // message contains the result from the server
  string message = 1;
}

message GrafanaUser {
  GrafanaUserSpec   spec   = 1;
  GrafanaUserStatus status = 2;

  option (dev.f110.kubeproto.kind) = {
  };
}

message GrafanaUserSpec {
  string email = 1;
  bool   admin = 2;
}

message GrafanaUserStatus {
  bool ready = 1;
}
